# portfolio-manager

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PLAN.md  PLAN_TEXTUAL.md  PR_REVIEW.md  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  portfolio.db  pyproject.toml  settings.yaml  test_debug.db  test_server.py  textual-web.toml
.github/workflows/: ci.yaml
docs/: MASTER_PLAN.md  PLAN_LEGACY.md
docs/solara/: DESIGN.md
frontend/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/charts/: BenchmarkComparison.tsx  DrawdownChart.tsx  MonthlyReturnsChart.tsx  NavBenchmarkChart.tsx  RiskMetricsWidget.tsx
frontend/src/components/: AllocationPie.tsx  BasketAllocation.tsx  BenchmarkComparison.tsx  BuyModal.tsx  DrawdownChart.tsx  ImportModal.tsx  Layout.tsx  MonthlyReturnsHeatmap.tsx  NavChart.tsx  PageLayout.tsx  PortfolioCard.tsx  PositionTable.tsx  RiskGauge.tsx  SellModal.tsx
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
frontend/src/pages/: AnalyticsPage.tsx  BasketsPage.tsx  DashboardPage.tsx  LoginPage.tsx  PositionsPage.tsx  RegisterPage.tsx  SettingsPage.tsx  TradeAuditPage.tsx  TradesPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts  basketStore.ts  index.ts  portfolioStore.ts  positionStore.ts  tradeStore.ts
migrations/: env.py  script.py.mako
migrations/versions/: 18ab48ee7c87_add_cusip_column_to_assets.py  30b840d15fd1_initial_schema_all_models.py  998c35d6e512_initial_schema.py
src/portfolio_manager/: auth.py  config.py  database.py  exceptions.py  main.py  solara_app.py
src/portfolio_manager/models/: __init__.py  account.py  asset.py  base.py  basket.py  benchmark.py  portfolio.py  position.py  transaction.py  user.py
src/portfolio_manager/routes/: __init__.py  accounts.py  analytics.py  baskets.py  charts.py  dashboard.py  portfolios.py  positions.py  reports.py  statement_import.py  trades.py  transactions.py  ui.py  ws.py
src/portfolio_manager/services/: __init__.py  analytics_service.py  basket_seed.py  benchmark.py  chart_data.py  charts.py  classification.py  data_feed.py  nav_history.py  portfolio_calc.py  portfolios.py  price_cache.py  report_generator.py  risk.py  risk_gauges.py  settings_service.py  statement_import.py  trades.py  ws_service.py
src/portfolio_manager/templates/: analytics.html  base.html  dashboard.html  index.html  positions.html  settings.html
src/portfolio_manager/templates/components/: nav.html
src/portfolio_manager/ui/: __init__.py  app.py  charts.py  dashboard.py  styles.tcss  trades.py
src/portfolio_manager/ui/screens/: __init__.py  analytics.py  base.py  dashboard.py  help.py  settings.py  trades.py
src/portfolio_manager/ui/widgets/: __init__.py  portfolio_modal.py  position_table.py  risk_gauge.py  trade_modal.py
tests/: conftest.py  test_analytics.py  test_analytics_screen.py  test_analytics_service.py  test_api.py  test_auth.py  test_baskets.py  test_benchmark.py  test_chart_data.py  test_chart_service.py  test_charts_api.py  test_cors_middleware.py  test_dashboard_phase5.py  test_data_feed.py  test_e2e.py  test_exceptions.py  test_models.py  test_nav_history.py  test_pilot_screens.py  test_portfolio_calc.py  test_portfolio_service.py  test_portfolios.py  test_portfolios_integration.py  test_positions.py  test_price_cache.py  test_price_error_handling.py  test_report_generator.py  test_risk_metrics.py  test_sell_and_trades.py  test_settings_service.py  test_statement_import.py  test_trades.py  test_trades_service.py  test_transactions.py  test_ui_components.py  test_ws.py
