[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Professional portfolio management tool with Schwab asset-class support"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "yfinance>=0.2",
    "structlog>=26.1.0",
    "textual>=0.86.0",
    "textual-plotext>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
# Note: textual-web is NOT listed here because it depends on textual<0.44.0
# which conflicts with our textual>=0.86.0. Install separately with:
#   pip install textual-web
# Then use `portfolio-manager --web` to launch in a browser.

[project.scripts]
portfolio-manager = "portfolio_manager.ui.app:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
