[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Web-based portfolio management application with multi-account support, real-time pricing, and risk analytics"
requires-python = ">=3.14"
dependencies = [
    # Backend framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ORM / Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Auth
    "fastapi-users[sqlalchemy,oauth]>=14.0.0",
    # Config
    "dynaconf>=3.2.0",
    # Data / Analytics
    "yfinance>=0.2.40",
    "polars>=1.0.0",
    # Logging
    "structlog>=24.4.0",
    # Utils
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx[ws]>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_manager"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "F821"]  # F821: undefined names in string annotations (SQLAlchemy forward refs)

[tool.ruff.lint.per-file-ignores]
# FastAPI's idiomatic `Depends(...)` default-argument pattern triggers B008.
"src/portfolio_manager/routes/**/*.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-m", "not live"]
markers = [
    "live: tests that hit the real yfinance network (opt-in via -m live)",
]
